--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@ng-icons/boxicons": "^32.1.0",
     "@ng-icons/core": "^32.1.0",
     "@ng-icons/font-awesome": "^32.1.0",
+    "@ng-icons/phosphor-icons": "^32.1.0",
+    "@ng-icons/simple-icons": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.12",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
